--- a/public/stylus/base.styl
+++ b/public/stylus/base.styl
@@ -9,3 +9,17 @@ html
 @media (min-width: tablet-medium)
 	html
 		font-size 100%
+
+.header
+	display flex
+	justify-content space-between
+	align-items center
+	max-width max-width
+	margin .5rem auto
+
+.category-menu
+	border-top 1px solid #eee
+	border-bottom 1px solid #eee
+	.thick-menu
+		max-width max-width
+		margin auto
