--- a/public/stylus/discover-artists.styl
+++ b/public/stylus/discover-artists.styl
@@ -29,41 +29,11 @@
 @import 'elements/buttons.styl'
 
 /*------------------------------------*
-	$ WORKS
+	$ ARTISTS
 *------------------------------------*/
-@import 'elements/works.styl'
-
-/*------------------------------------*
-	$ LOGIN
-*------------------------------------*/
-@import 'elements/login.styl'
-
-/*------------------------------------*
-	$ FORMS
-*------------------------------------*/
-@import 'elements/forms.styl'
-
-/*------------------------------------*
-	$ INPUTS
-*------------------------------------*/
-@import 'elements/inputs.styl'
+@import 'elements/artists.styl'
 
 
-.slogan
-	padding 1rem
-	text-align center
-	max-width max-width
-	margin auto
-	.button-solid
-		margin .5rem
-		
-.works-menu
-	display flex
-	justify-content space-between
-	max-width max-width
-	margin auto
-	padding 0 1rem
-	
-.works
+.artists
 	max-width max-width
 	margin auto
