--- a/public/stylus/discover-works.styl
+++ b/public/stylus/discover-works.styl
@@ -24,9 +24,14 @@
 @import 'elements/texts.styl'
 
 /*------------------------------------*
-	$ BUTTONS
+	$ FILTERS
 *------------------------------------*/
-@import 'elements/buttons.styl'
+@import 'elements/filters.styl'
+
+/*------------------------------------*
+	$ INPUTS
+*------------------------------------*/
+@import 'elements/inputs.styl'
 
 /*------------------------------------*
 	$ WORKS
@@ -34,20 +39,14 @@
 @import 'elements/works.styl'
 
 /*------------------------------------*
-	$ LOGIN
+	$ BUTTONS
 *------------------------------------*/
-@import 'elements/login.styl'
+@import 'elements/buttons.styl'
 
 /*------------------------------------*
-	$ FORMS
+	$ ARTISTS
 *------------------------------------*/
-@import 'elements/forms.styl'
-
-/*------------------------------------*
-	$ INPUTS
-*------------------------------------*/
-@import 'elements/inputs.styl'
-
+// @import 'elements/artists.styl'
 
 .slogan
 	padding 1rem
@@ -56,14 +55,12 @@
 	margin auto
 	.button-solid
 		margin .5rem
-		
-.works-menu
-	display flex
-	justify-content space-between
+
+// .works
+// 	max-width max-width
+// 	margin auto
+
+.more-works
 	max-width max-width
 	margin auto
-	padding 0 1rem
-	
-.works
-	max-width max-width
-	margin auto
+	text-align center
