--- a/public/css/discover-artists.css
+++ b/public/css/discover-artists.css
@@ -320,124 +320,6 @@ html {
   cursor: pointer;
 }
 /*------------------------------------*
-	$ INPUTS
-*------------------------------------*/
-.search {
-  position: relative;
-}
-.search input {
-  width: 100%;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
-  padding: 0.5em 0 0.5em 2em;
-  color: #555;
-  font-size: 1rem;
-}
-.search i {
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translate(0, -50%);
-  -moz-transform: translate(0, -50%);
-  -o-transform: translate(0, -50%);
-  -ms-transform: translate(0, -50%);
-  transform: translate(0, -50%);
-  left: 0.75em;
-  color: #808080;
-}
-.input[type="text"],
-.input[type="email"],
-.input[type="password"] {
-  font-size: 1rem;
-  padding: 0.5em;
-  color: #555;
-  border: 1px solid #ccc;
-  width: 100%;
-}
-.input[type="text"]:focus,
-.input[type="email"]:focus,
-.input[type="password"]:focus {
-  border-color: rgba(82,168,236,0.8);
-  -webkit-box-shadow: 0 0 8px rgba(82,168,236,0.6);
-  box-shadow: 0 0 8px rgba(82,168,236,0.6);
-}
-.input[type="text"][data-size='large'],
-.input[type="email"][data-size='large'],
-.input[type="password"][data-size='large'] {
-  font-size: 1.15rem;
-}
-/*------------------------------------*
-	$ WORKS
-*------------------------------------*/
-.works {
-  overflow: hidden;
-}
-.works .work {
-  display: block;
-  margin: 1rem 0.5rem;
-  border: 1px solid #eee;
-  -webkit-transition: box-shadow ease-in-out 125ms;
-  -moz-transition: box-shadow ease-in-out 125ms;
-  -o-transition: box-shadow ease-in-out 125ms;
-  -ms-transition: box-shadow ease-in-out 125ms;
-  transition: box-shadow ease-in-out 125ms;
-}
-.works .work:hover {
-  -webkit-box-shadow: rgba(0,0,0,0.35) 0 0 10px;
-  box-shadow: rgba(0,0,0,0.35) 0 0 10px;
-}
-@media screen and (min-width: 151px) and (max-width: 300px) {
-  .works[data-columns]::before {
-    content: '1 .column.size-1of1';
-  }
-}
-@media screen and (min-width: 301px) and (max-width: 450px) {
-  .works[data-columns]::before {
-    content: '2 .column.size-1of2';
-  }
-}
-@media screen and (min-width: 451px) and (max-width: 600px) {
-  .works[data-columns]::before {
-    content: '3 .column.size-1of3';
-  }
-}
-@media screen and (min-width: 601px) and (max-width: 750px) {
-  .works[data-columns]::before {
-    content: '4 .column.size-1of4';
-  }
-}
-@media screen and (min-width: 751px) and (max-width: 900px) {
-  .works[data-columns]::before {
-    content: '5 .column.size-1of5';
-  }
-}
-@media screen and (min-width: 901px) {
-  .works[data-columns]::before {
-    content: '6 .column.size-1of6';
-  }
-}
-.column {
-  float: left;
-}
-.size-1of1 {
-  width: 100%;
-}
-.size-1of2 {
-  width: 50%;
-}
-.size-1of3 {
-  width: 33.333333333333336%;
-}
-.size-1of4 {
-  width: 25%;
-}
-.size-1of5 {
-  width: 20%;
-}
-.size-1of6 {
-  width: 16.666666666666668%;
-}
-/*------------------------------------*
 	$ ARTISTS
 *------------------------------------*/
 .artists {
@@ -618,24 +500,7 @@ html {
 .work12 {
   background-image: url("../img/works/obra12.jpg");
 }
-/*------------------------------------*
-	$ STYLE GUIDE
-*------------------------------------*/
-body {
-  padding: 1rem;
-  background: #f5f5f5;
-}
-.style-guide-wrapper {
-  margin: auto;
+.artists {
   max-width: 1100px;
-}
-.style-guide-element {
-  margin-top: 1rem;
-  background: #fff;
-}
-.style-guide-title {
-  color: #aaa;
-  font-size: 0.9rem;
-  font-family: 'Arial';
-  text-align: right;
+  margin: auto;
 }
