--- a/public/css/index.css
+++ b/public/css/index.css
@@ -55,6 +55,36 @@ html {
     font-size: 100%;
   }
 }
+.header {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-pack: justify;
+  -moz-box-pack: justify;
+  -o-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  max-width: 1100px;
+  margin: 0.5rem auto;
+}
+.category-menu {
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+}
+.category-menu .thick-menu {
+  max-width: 1100px;
+  margin: auto;
+}
 /*------------------------------------*
 	$ LOGOS
 *------------------------------------*/
@@ -283,11 +313,16 @@ html {
   text-transform: uppercase;
   font-family: 'Roboto Condensed';
 }
+.button-filter {
+  padding: 0.5em 0.75rem;
+  font-family: 'Raleway';
+  border: 1px solid #ddd;
+  cursor: pointer;
+}
 /*------------------------------------*
 	$ WORKS
 *------------------------------------*/
 .works {
-  padding: 0 0.5rem;
   overflow: hidden;
 }
 .works .work {
@@ -413,7 +448,7 @@ html {
   -webkit-border-radius: 4px;
   border-radius: 4px;
   border: 1px solid #ccc;
-  padding: 0.75em 0 0.75em 2em;
+  padding: 0.5em 0 0.5em 2em;
   color: #555;
   font-size: 1rem;
 }
@@ -448,36 +483,6 @@ html {
 .input[type="email"][data-size='large'],
 .input[type="password"][data-size='large'] {
   font-size: 1.15rem;
-}
-.header {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
-  display: flex;
-  -webkit-box-pack: justify;
-  -moz-box-pack: justify;
-  -o-box-pack: justify;
-  -ms-flex-pack: justify;
-  -webkit-justify-content: space-between;
-  justify-content: space-between;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  -o-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-  max-width: 1100px;
-  margin: 0.5rem auto;
-}
-.category-menu {
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #eee;
-}
-.category-menu .thick-menu {
-  max-width: 1100px;
-  margin: auto;
 }
 .slogan {
   padding: 1rem;
