--- a/public/stylus/elements/buttons.styl
+++ b/public/stylus/elements/buttons.styl
@@ -75,7 +75,7 @@
 	&[data-expand='true']
 		display block
 		text-align center
-		
+
 
 /*------------------------------------*
 	$ BUTTON LINK
@@ -86,3 +86,13 @@
 	letter-spacing 1px
 	text-transform uppercase
 	font-family 'Roboto Condensed'
+
+
+/*------------------------------------*
+	$ BUTTON FILTER
+*------------------------------------*/
+.button-filter
+	padding .5em .75rem
+	font-family 'Raleway'
+	border 1px solid #ddd
+	cursor pointer
