--- a/public/stylus/elements/inputs.styl
+++ b/public/stylus/elements/inputs.styl
@@ -7,9 +7,11 @@
 		width 100%
 		border-radius 4px
 		border 1px solid #cccccc
-		padding .75em 0 .75em 2em
+		// padding .75em 0 .75em 2em
+		padding .5em 0 .5em 2em
 		color #555
 		font-size 1rem
+		// font-size .95rem
 	i
 		position absolute
 		top 50%
